# WebServer_1

./: 404.html  Cargo.toml  index.html  index2.html
resources/services/: EOMI_euc_kr.TXT  JOSA_euc_kr.TXT
src/: lib.rs  main.rs  wc.rs
src/servers/: mod.rs  single.rs
src/services/: mod.rs  rp.rs  wc.rs
