[package]
name = "WebServer_1"
version = "0.1.0"
authors = ["namsoocho"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
regex = "1.3.7"
encoding_rs = "0.8.22"
log = "0.4.8"
env_logger = "0.7.1"
chardet = "0.2.4"
cucumber = { package = "cucumber_rust", version = "^0.6.0" }

[[test]]
name = "cucumber"
harness = false

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }